manifest/prod/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paybox-ingress
  namespace: group-5-prod

  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tcc-01.th1.proen.cloud

      http:
        paths:
          - path: "/group-5-prod/authenticationapi(/|$)(.*)"
            pathType: Prefix
            backend:
              service:
                name: authenticationapi-service
                port:
                  number: 80
          # - path: "/group-5-prod/webadmin"
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: webadmin-service
          #       port:
          #         number: 80
